# poy5

./: .hgignore  AUTHORS  INSTALL  LICENSE  Makefile.in  POY5.aux  POY5.tex  README  VERSION  basic_builder.sh  basic_docs.sh  changes.txt  clean.sh  config.win32  configure  configure.ac  linux_builder.sh  mac_builder.sh  mkdmg.sh  sample.poy  set-config.pl  update_git_repo.sh  win32_build.sh
doc/: Makefile  Makefile.in  QuickStart.tex  allcommands.tex  commands.tex  makeVersion.ml  poy3commands.tex  poyheuristics.tex  poylibrary.bib  poytutorials.tex
macinstall/: postinstall  postupgrade
ocamlmpi/: Makefile.in  collcomm.c  comm.c  configure  configure.ac  init.c  mpi.ml  msgs.c
plugins/: README  phyloxml.ml
src/: CocoaCaml.m  Makefile.in  Makefile.local  Makefile.win32  _tags.in  add.c  add.h  addCS.ml  addCS.mli  addGen.ml  addVec.ml  algn.c  algn.h  aliMap.ml  aliMap.mli  allDirChar.ml  allDirNode.ml  all_sets.ml  all_sets.mli  alphSpec.ml  alphSpec.mli  alphabet.ml  alphabet.mli  analyzer.ml  analyzer.mli  annchrom.ml  annchrom.mli  annchromAli.ml  annchromAli.mli  annchromCS.ml  annchromCS.mli  arguments.ml  array_ops.ml  array_ops.mli  array_pool.c  array_pool.h  asciiTree.ml  binaryTree.ml  binaryTree.mli  bisect.sh  (+312 more)
src/camlpdf-0.3/: graphicpdf.ml  pdfcrypt.ml  zlibstubs.c
src/concorde031219/: WhatIDisabled.txt  config.cache  config.status  output_config_gcc
src/concorde031219/BIGGUY/: bigguy.tst
src/concorde031219/EDGEGEN/: edgegen.c  xnear.c
src/concorde031219/TSP/: concorde.c
src/doc/: QuickStart.tex  allcommands.tex  commands.aux  commands.out  commands.tex  commands.toc  general.idx  parsedoc.pl  poy3.idx  poyfaq.tex  poyheuristics.tex  poylibrary.bib  poytutorials.tex  short.tex  version.aux  version.tex
src/doc/doc/: QuickStart.tex  poytutorials.tex  version.aux  version.tex
src/graphps/: Makefile.in  Makefile.win32  graphps.ml  graphps.mli
src/graphviz/: dot.ml  dot_ast.ml
src/grappa/: Makefile.in  Makefile.win32  all_inversion_medians.c  all_sorting_reversals.c  all_sorting_reversals.h  bbtsp.c  bitvector.c  calc_medians.c  condense3.c  condense3.h  convert.c  convert.h  grappa.ml  grappa.mli  grappa_interface.c  hashtable.c  hashtable.h  inittree.c  invdist.c  invdist.h  inversion_median.c  inversion_median_alberto.c  inversion_median_alberto.h  lists.c  lists.h  lk_main.c  lk_main.h  med_util.c  med_util.h  mgr.c  mgr.h  mgr_check.c  mgr_check.h  mgr_e_malloc.c  mgr_e_malloc.h  mgr_genome_ops.c  mgr_genome_ops.h  mgr_genome_print.c  mgr_genome_print.h  mgr_graph_components.c  (+25 more)
src/gz-0.5.7/: Makefile.in  bz.ml  bz.mli  c_bz.c  c_gz.c  configure  configure.in  io.h
src/gz-0.5.7/doc/: Bz.html  Gz.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Bz.html  type_Gz.html
src/hennig/: file.ml  grammar.mly  lexer.mll  p.ml  parsed.ml
src/kolmo/: align.ml  atomicIndels.ml  compiler.ml  dcj.ml  encodings.ml  encodings.mli  grdrl.ml  grimm.ml  identity.ml  indPM.ml  indelsubs.ml  inversion.ml  inversionAndTranslocation.ml  kpervasives.ml  networks.ml  pm.ml  primitives.ml  s_K.ml  simpleIndels.ml  simpleIndels2.ml  skBasics.ml  tandem.ml  tdrl.ml  transpositions.ml  treeHypothesis.ml
src/kolmogorov_models/: kolmoPervasives.ml  kolmoPhylo.ml  kolmoPhylo2.ml  kolmoPhylo3.ml
src/nexus/: file.ml  grammar.mly  lexer.mll  p.ml  parsed.ml
src/ocamlmpi/: groups.c  test_mandel.ml  utils.c
src/parser/: asn1.ml  clustalSeq.ml  dictionary.ml  e.ml  files.ml  fixedStatesDict.ml  gBSeq.ml  genbank.ml  grappaParser.ml  iNSDSeq.ml  ignoreList.ml  molecular.ml  newSeq.ml  oldHennig.ml  pAlphabet.ml  phylip.ml  setGroups.ml  tinySeq.ml  transformationCostMatrix.ml  wildcard.ml  xMLGB.ml
src/plugins/: supramap.ml
src/utils/: costFlip.ml  hennig_meeting.ml  hennig_meeting_parsimony.ml  hennig_meeting_parsimony_random.ml  kolmo_diagnoser.ml  test_functions.ml  test_numerical.ml  treeCostApprox.ml  tree_compare.ml
src/utils/compareTest/: algnfull.ml  randomarr.ml  ukk_space_save.ml  ukktest.sh
utils/: inversions.ml  lowerBound.ml  randomTree.ml  solutionTree.ml  swap_annealing.ml  triplets.ml
xml/: swami.xml.in
xslt/: branchlength.xsl  old_transform.xsl  printtree.xsl  svgtree.xsl  transform-html.xsl  transform-nexus.xsl  transform-text.xsl
